k8s/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incident-api

spec:
  replicas: 3

  selector:
    matchLabels:
      app: incident-api

  template:
    metadata:
      labels:
        app: incident-api

    spec:
      containers:
        - name: api

          image: incident-api:latest

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /ready
              port: 8080

            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8080

            initialDelaySeconds: 10
            periodSeconds: 10

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
