k8s/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: incident-api
  labels:
    app: incident-api

spec:
  selector:
    app: incident-api

  ports:
    - name: http
      port: 80
      targetPort: 8080

  type: ClusterIP
