k8s/api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: incident-api-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: incident.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: incident-api

                port:
                  number: 80
